--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Temperature Converter</title>
-    <link rel="stylesheet" href="tempConverter.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <form>
@@ -17,6 +17,6 @@
         <button type="button" class="submit-btn" onclick="convert()" >Submit</button>
         <p id="js-result" class="result"></p>
     </form>
-    <script src="tempConverter.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
